[package]
name = "gtmpl"
version = "0.5.6"
authors = ["Florian Merz <flomerz@gmail.com>"]
description = "The Golang Templating Language for Rust"
license = "MIT"
repository = "https://github.com/fiji-flo/gtmpl-rust"
documentation = "https://docs.rs/crate/gtmpl"
keywords = ["golang", "template", "templating"]
categories = ["template-engine"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE"]

[badges]
travis-ci = { repository = "fiji-flo/gtmpl-rust" }

[features]
gtmpl_dynamic_template = []

[dependencies]
itertools = "0.7"
lazy_static = "1.1"
percent-encoding = "1.0"
gtmpl_value = "0.3"

[dev-dependencies]
gtmpl_derive = "0.3"
