[package]
name = "gtmpl"
version = "0.6.0"
authors = ["Florian Merz <me@fiji-flo.de>"]
description = "The Golang Templating Language for Rust"
license = "MIT"
repository = "https://github.com/fiji-flo/gtmpl-rust"
documentation = "https://docs.rs/crate/gtmpl"
keywords = ["golang", "template", "templating"]
categories = ["template-engine"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE"]
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[features]
gtmpl_dynamic_template = []

[dependencies]
itertools = "0.10"
lazy_static = "1"
percent-encoding = "2"
gtmpl_value = "0.4"

[dev-dependencies]
gtmpl_derive = "0.4"
